# nompac_rs

./: .gitignore  Cargo.toml  README.org  TODO.org
configs/: config.json  mirrorlist  pacman.conf
configs/modules/: additional_programs.json  (+17 more)
examples/: config.toml
repository/: emacs-catppuccin-theme-git-4441d5114fdcc2eb05186a974b4bbad7224e43b5-1-x86_64.pkg.tar.zst  emacs-company-mode-git-9c273fc7c1a9dd69ccf508589211c4f8bd0e0765-1-x86_64.pkg.tar.zst  emacs-compat-git-09dce8a193c5a70277512263782b82fa1cba84c0-1-x86_64.pkg.tar.zst  emacs-consult-git-afda4c68a4ebcc9104bf2a645848d7e92269f054-1-x86_64.pkg.tar.zst  emacs-evil-git-72f556524b88e9d30dc7fc5b0dc32078c166fda7-1-x86_64.pkg.tar.zst  emacs-go-mode-git-636d36e37a0d2b6adb2e12d802ff4794ccbba336-1-x86_64.pkg.tar.zst  emacs-goto-chg-git-72f556524b88e9d30dc7fc5b0dc32078c166fda7-1-x86_64.pkg.tar.zst  emacs-rust-mode-git-c87f6f82bd484fb1c15009c8a3518ebb62942605-1-x86_64.pkg.tar.zst  emacs-spacemacs-theme-git-398f73298c5ede1fffe8a7bc7efc40c2e89a754b-1-x86_64.pkg.tar.zst  emacs-yasnippet-git-fe1f4e0e96ce42d8668920335eb22c3c009dab3e-1-x86_64.pkg.tar.zst  emacs-yasnippet-snippets-git-23bcbcd11f567a2659ae413c62c82892eb50a3f1-2-x86_64.pkg.tar.zst  nomispaz.db  nomispaz.db.tar.zst  nomispaz.db.tar.zst.old  nomispaz.files  nomispaz.files.tar.zst  nomispaz.files.tar.zst.old  qtile-extras-0.29.0-2-any.pkg.tar.zst  tuxedo-drivers-dkms-4.11.6-1-x86_64.pkg.tar.zst  wlroots-0.18.2-1-x86_64.pkg.tar.zst  wlroots-debug-0.18.2-1-x86_64.pkg.tar.zst  wlroots0.17-0.17.4-3-x86_64.pkg.tar.zst
src/: #main.rs#  TODO.org  TODO.org~  main.rs
(+64 files in other folders)
