[package]
name = "nompac_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
chrono = "0.4"
tar = "0.4"
clap = { version = "4.5.16", features = ["derive"]}
walkdir = "2.5.0"
glob = "0.3.1"
regex = "1.10.6"
colored = "2.1.0"
dirs = "5.0.1"
tokio = { version = "1.40.0", features = ["full"] }

